--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -26,6 +26,7 @@
   --color-red: #ff3c00;
   --color-dark-red: #d71400;
   --color-dark-grey: #8f8f8f;
+  --color-footer-color: #646363;
  
 }
 
@@ -122,9 +123,9 @@
     height: 30px;
     width: 30px;
     background-color: #fff;
-    border: 2px solid #ccc;
+    border: 1px solid #ccc;
     border-radius: 50%;
-    transform: translateY(-55%); 
+    transform: translateY(-50%); 
   }
   
   .radio-container:hover input ~ .radio-checkmark {
